--- a/templates/articles.html
+++ b/templates/articles.html
@@ -1,5 +1,7 @@
 {% extends 'layout.html' %}
 
+{% block title %}List of Acticles page{% endblock %}
+
 {% block content %}
 <h1>Articles</h1>
 <ul class="list-group">
