--- a/templates/error.html
+++ b/templates/error.html
@@ -1,5 +1,6 @@
-
 {% extends 'layout.html' %}
+
+{% block title %}error page{% endblock %}
 
 {% block content %}
 <h1>Oops! Something went wrong.</h1>
