--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,13 @@
 {% extends 'layout.html' %}
 
-{% block content %}
 
-<h1 class="mt-5">Welcome to Flogskit!</h1>
+{% block title %}Flogskit Home Page{% endblock %}
+
+{% block content %}
+<h1>Welcome to Flogskit!</h1>
 <div class="container">
 <p>This is a blog application built on the  Flask Framework and users can upload articles..</p>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est aperiam aspernatur facilis distinctio commodi maxime repellendus recusandae, beatae nihil molestias voluptatum, itaque possimus porro, eum praesentium saepe maiores repudiandae ea.</p>
 </div>
-
 {% endblock content %}
 
