--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -1,8 +1,18 @@
-
-<footer class="footer mt-auto py-3 bg-body-tertiary">
+<footer>
   <div class="container">
-    <span class="text-body-secondary">Place sticky footer content here.</span>
+    <nav class="navbar fixed-bottom navbar-light bg-light ">
+      <div class="container-fluid">
+        <span class="navbar-text mb-0">Copyright © 2024 ipree houhougo</span>
+        <div class="spacer"></div>
+        <ol class="breadcrumb mb-0">
+          <li class="breadcrumb-item" aria-current="page">
+            <a href="#">Privacy Policy</a>
+          </li>
+          <li class="breadcrumb-item" aria-current="page">
+            <a href="#">Terms of Use</a>
+          </li>
+        </ol>
+      </div>
+    </nav>
   </div>
 </footer>
-
- 
