--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,8 @@
 {% extends 'layout.html' %}
 
+{% block title %}about page{% endblock %}
+
 {% block content %}
-    <h1>About Us</h1>
+    <h1 class="mt-5">About Us</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est aperiam aspernatur facilis distinctio commodi maxime repellendus recusandae, beatae nihil molestias voluptatum, itaque possimus porro, eum praesentium saepe maiores repudiandae ea.</p>
 {% endblock content %}
